static/css/style.css
/* ... */
.login-notice a:hover {
  font-size: 1.9rem;
  color: #09097a;
}

.comment-container {
  display: flex;
  flex-direction: column;
  background-color: #e7e7e0;
  margin-bottom: 12px;
  padding: 10px;
  border-radius: 10px;
}

.comment-container h4 {
  color: #2b2bc4;
  margin: 0 0 4px 0;
  padding: 0;
  font-size: 1.6rem;
  font-weight: 600;
}

.comment-container p {
  margin: 0;
  padding: 0;
  font-size: 1.5rem;
  font-weight: 500;
}

/* --- rating --- */

.album-rating-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #fa7e0a;
  font-size: 2.2rem;
  padding: 6px;
}

/* --------------- registration page --------------- */

.register-form-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 24px;
  margin-bottom: 24px;
}

.register-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 50%;
  min-height: 50px;
  border: 2px solid #fa7e0a;
  padding: 24px;
  border-radius: 10px;
}

.register-form h3 {
  font-weight: 500;
  margin: 0px 0px 16px 0px;
  padding: 0;
}

.input-field {
  width: 80%;
}

.fa-user-plus,
.fa-user-lock {
  color: #09097a;
}

.register-btn {
  padding: 8px;
  color: #fffef7;
  background-color: #09097a;
  text-transform: uppercase;
  font-size: 1.6rem;
  font-weight: 500;
  border: none;
  border-radius: 5px;
}

.register-btn:hover {
  background-color: #fa7e0a;
  transform: scale(1.05);
}

.input-field > label {
  color: #000000;
  font-size: 1.4rem;
}

.navigate-login-container {
  margin: 16px 0px;
}

.navigate-login-container p {
  font-size: 2rem;
}

.navigate-login-container a {
  color: #fa7e0a;
}

.navigate-login-container a:hover {
  color: #09097a;
}

/* --------------- log in page --------------- */

.login-form-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 24px;
  margin-bottom: 24px;
}

.login-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 50%;
  min-height: 50px;
  border: 2px solid #fa7e0a;
  padding: 24px;
  border-radius: 10px;
}

.fa-user {
  color: #09097a;
}

.login-btn {
  padding: 12px;
  color: #fffef7;
  background-color: #09097a;
  text-transform: uppercase;
  font-size: 1.5rem;
  font-weight: 500;
  border: none;
  border-radius: 5px;
}

.login-btn:hover {
  background-color: #fa7e0a;
  transform: scale(1.05);
}

.navigate-register-container {
  margin: 16px 0px;
}

.navigate-register-container p {
  font-size: 2rem;
}

/* --- flash messages --- */

.flashes {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 24px;
  margin-bottom: 24px;
  background-color: rgba(250, 126, 10, 0.5);
  color: #09097a;
}

.flashes h4 {
  margin: 0;
  padding: 0;
  font-size: 2.6rem;
  font-weight: 500;
  line-height: 2;
}

/* --------------- footer --------------- */

footer {
  background: #09097a;
  color: #fffef7;
  padding: 12px 0px;
}

footer i {
  color: #fffef7;
  font-size: 4rem;
  margin: 12px 18px;
  padding: 0;
}

footer i:hover {
  color: rgba(255, 254, 247, 0.6);
}

/* --------------- welcome / landing page media queries --------------- */

@media (max-width: 1025px) {
  .landing-page-content {
    margin-bottom: 40px;
  }

  .landing-page-title {
    font-size: 4.4rem;
    margin-bottom: 10px;
  }

  .landing-page-subtitle {
    font-size: 2.2rem;
    margin-bottom: 6px;
  }

  .enter-site-button {
    padding: 6px 20px;
    margin-top: 8px;
    margin-bottom: 12px;
    font-size: 1.6rem;
  }
}

@media (max-width: 870px) {
  .landing-page-content {
    margin-bottom: 30px;
  }

  .landing-page-title {
    font-size: 4rem;
    margin-bottom: 8px;
  }

  .landing-page-subtitle {
    font-size: 2rem;
    margin-bottom: 5px;
  }

  .enter-site-button {
    padding: 5px 18px;
    margin-top: 7px;
    margin-bottom: 11px;
    font-size: 1.5rem;
  }
}

@media (max-width: 550px) {
  .landing-page-title {
    font-size: 3.4rem;
    margin-bottom: 6px;
  }

  .landing-page-subtitle {
    font-size: 1.8rem;
    margin-bottom: 4px;
  }

  .enter-site-button {
    padding: 4px 12px;
    margin-top: 4px;
    margin-bottom: 6px;
    font-size: 1.4rem;
  }

  .landing-page-content img {
    width: 80px;
  }
}

@media (max-width: 454px) {
  .landing-page-title {
    font-size: 3rem;
  }
}

@media (max-width: 454px) {
  .landing-page-title {
    font-size: 3rem;
  }

  .landing-page-subtitle {
    font-size: 1.6rem;
  }

  .landing-page-content img {
    width: 70px;
  }
}

@media (max-width: 399px) {
  .landing-page-title {
    font-size: 2.6rem;
    text-shadow: 2px 1px #000000;
  }

  .landing-page-subtitle {
    font-size: 1.5rem;
    text-shadow: 1px 1px #000000;
  }
}

@media (max-width: 352px) {
  .landing-page-title {
    font-size: 2.3rem;
  }

  .landing-page-subtitle {
    font-size: 1.4rem;
  }

  .enter-site-button {
    padding: 4px 8px;
    margin-top: 4px;
    margin-bottom: 4px;
    font-size: 1.3rem;
  }
}

@media (max-width: 318px) {
  .landing-page-title {
    font-size: 2rem;
  }

  .landing-page-subtitle {
    font-size: 1.3rem;
  }
}

/* --------------- parallax media queries --------------- */

@media (max-width: 1367px) {
  .parallax-container {
    height: 25vh;
  }
}

@media (max-width: 1025px) {
  .parallax-container {
    height: 20vh;
    margin-top: 15px;
  }
}

@media (max-width: 769px) {
  .parallax-container {
    height: 15vh;
    margin-top: 10px;
  }
}

/* --------------- section-title media queries --------------- */

@media (max-width: 1025px) {
  .section-title {
    font-size: 3.6rem;
    margin: 16px 0px 6px 0px;
  }
}

@media (max-width: 786px) {
  .section-title {
    font-size: 3.2rem;
    margin: 12px 0px 4px 0px;
  }
}

@media (max-width: 601px) {
  .section-title {
    font-size: 2.8rem;
    margin: 10px 0px 4px 0px;
  }
}

@media (max-width: 420px) {
  .section-title {
    font-size: 2.7rem;
    margin: 8px 0px 4px 0px;
  }
}
/* ... */

